--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,15 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<version>2.19.1</version>
+		<configuration>
+		  <parallel>methods</parallel>
+		  <threadCount>10</threadCount>
+		</configuration>
+	    </plugin>
         </plugins>
     </build>
 
